start to landing page left aligned about us

--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
 </head>
 
 <body>
+    <!-- Landing Page -->
+    <div class="px-8 md:px-24 lg:px-48">
+        <div class="border-t  border-gray-900/10 py-12 flex flex-col items-center text-center"></div>
+            <h1 class="text-5xl font-bold tracking-tight text-gray-900 text-center">Welcome to CTC</h1>
+        </div>
+    </div>
     <!-- About us -->
     <div class="px-8 md:px-24 lg:px-48 sm:overflow-hidden">
-        <div class="border-t border-gray-900/10 py-12 flex flex-col items-center">
+        <div class="border-t  border-gray-900/10 py-12 flex flex-col items-center ">
+            <div class="w-full lg:max-w-xlg flex justify-start items-start flex-col ">
+
             <h2 class="text-base font-semibold leading-7 text-primary">Who are we?</h2>
             <p class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl pb-6">
                 About Us</p>
@@ -29,6 +37,7 @@
                 Mill, leveraging his expertise to create custom parts for a diverse clientele, including commercial
                 enterprises, private individuals, and the racing industry.
             </p>
+            </div>
         </div>
     </div>
 
