--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <!-- Landing Page -->
     <div class="px-8 md:px-24 lg:px-48">
-        <div class="border-t  border-gray-900/10 py-12 flex flex-col items-center text-center"></div>
-            <h1 class="text-5xl font-bold tracking-tight text-gray-900 text-center">Welcome to CTC</h1>
+        <div class="py-12 flex flex-col items-center text-center"></div>
+            <h1 class="text-5xl font-bold tracking-tight text-gray-900 text-center">Welcome to <span class="text-primary">CTC</span></h1>
         </div>
     </div>
     <!-- About us -->
