--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
                     <!-- Mobile menu button-->
                     <button type="button"
-                        class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-900 hover:bg-gray-900 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
+                        class="relative inline-flex items-center justify-center hover:bg-gray-900 hover:text-white rounded-md p-2 text-gray-900 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
                         aria-controls="mobile-menu" aria-expanded="false">
                         <span class="absolute -inset-0.5"></span>
                         <span class="sr-only">Open main menu</span>
@@ -60,22 +60,53 @@
                         </div>
                     </div>
                 </div>
+                <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
+                    <div class="relative inline-block text-left">
+                        <div>
+                          <button type="button" class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50" id="menu-button" aria-expanded="true" aria-haspopup="true">
+                            Options
+                            <svg class="-mr-1 h-5 w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                              <path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z" clip-rule="evenodd" />
+                            </svg>
+                          </button>
+                        </div>
+                      
+                        <!--
+                          Dropdown menu, show/hide based on menu state.
+                      
+                          Entering: "transition ease-out duration-100"
+                            From: "transform opacity-0 scale-95"
+                            To: "transform opacity-100 scale-100"
+                          Leaving: "transition ease-in duration-75"
+                            From: "transform opacity-100 scale-100"
+                            To: "transform opacity-0 scale-95"
+                        -->
+                        <div class="absolute left-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1" id="dropdown-menu">
+                          <div class="py-1" role="none">
+                            <!-- Active: "bg-gray-100 text-gray-900", Not Active: "text-gray-700" -->
+                            <a href="#" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-item-0">Products</a>
+                            <a href="#" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-item-2">Services</a>
+                            <a href="#" class="text-gray-700 block px-4 py-2 text-sm border-b border-gray-900/10" role="menuitem" tabindex="-1" id="menu-item-1">About us</a>
+                            <a href="#" class="text-gray-700 block px-4 py-2 text-sm " role="menuitem" tabindex="-1" id="menu-item-2">Contact us</a>
+                          </div>
+                        </div>
+                      </div>
             </div>
         </div>
 
         <!-- Mobile menu, show/hide based on menu state. -->
         <!-- Mobile menu, show/hide based on menu state. -->
-<div class="sm:hidden fixed top-16 inset-x-0 z-50" id="mobile-menu">
-    <div class="space-y-1 px-2 pt-1 pb-2 border-gray-900/10"> <!-- Added top padding (adjust as needed) -->
+<div class="sm:hidden fixed top-16 inset-x-0 z-50 px-1" id="mobile-menu">
+    <div class="space-y-1 px-2 pt-1 pb-2 bg-gray-900 border-b rounded-md border-gray-900/10"> <!-- Added top padding (adjust as needed) -->
         <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
         <a href="#"
-            class="text-gray-900 bg-white hover:bg-gray-900 hover:text-white block px-3 py-2 text-base font-medium border-b border-gray-900/10 flex items-center"
+            class="text-gray-900  text-white block px-3 py-2 text-base font-medium border-b border-gray-900/10 flex items-center"
             aria-current="page" id="menu-who-we-are-mobile">Who we are</a>
         <a href="#"
-            class="text-gray-900 bg-white hover:bg-gray-900 hover:text-white block px-3 py-2 text-base font-medium border-b border-gray-900/10"
+            class="text-gray-900 text-white block px-3 py-2 text-base font-medium border-b border-gray-900/10"
             id="menu-what-we-do-mobile">What we do</a>
         <a href="#"
-            class="text-gray-900 bg-white hover:bg-gray-900 hover:text-white block px-3 py-2 text-base font-medium border-b border-gray-900/10"
+            class="text-gray-900 text-white hover:text-white block px-3 py-2 text-base font-medium border-x border-y border-gray-900/10"
             id="menu-contact-us-mobile">Contact us</a>
     </div>
 </div>
