skip to inquiry fix

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <p class="mt-6 text-lg leading-8 text-gray-600">If this is your first visit, take a moment to learn about
                 our high-precision machining services and industry solutions.</p>
             <button type="button"
-                onclick="document.getElementById('contactForm').scrollIntoView({ behavior: 'smooth' });"
+                onclick="document.getElementById('contactForm contact-form-section').scrollIntoView({ behavior: 'smooth' });"
                 class="flex flex-row items-center gap-3 rounded-md mt-6 bg-primary px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-primarylight focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
                 Skip to Inquiry
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white"
