--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
                             <a href="#"
                                 class="text-gray-900 hover:bg-gray-900 hover:text-white rounded-md px-3 py-2 text-md font-medium"
-                                aria-current="page" id="about-us">About us/a>
+                                aria-current="page" id="about-us">About us</a>
                             <a href="#"
                                 class="text-gray-900 hover:bg-gray-900 hover:text-white rounded-md px-3 py-2 text-md font-medium"
                                 id="services">Services</a>
