--- a/index2.html
+++ b/index2.html
@@ -68,7 +68,7 @@
                             <button type="button"
                                 class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50"
                                 id="menu-button" aria-expanded="true" aria-haspopup="true">
-                                Skip to 
+                                Skip to
                                 <svg class="-mr-1 h-5 w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor"
                                     aria-hidden="true">
                                     <path fill-rule="evenodd"
@@ -117,7 +117,7 @@
             <p class="mt-6 text-lg leading-8 text-gray-600">If this is your first visit, take a moment to learn about
                 our high-precision machining services and industry solutions.</p>
             <button type="button"
-                onclick="document.getElementById('contact-form-section').scrollIntoView({ behavior: 'smooth' });"
+                onclick="document.getElementById('contactForm contact-form-section').scrollIntoView({ behavior: 'smooth' });"
                 class="flex flex-row items-center gap-3 rounded-md mt-6 bg-primary px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-primarylight focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
                 Skip to Inquiry
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white"
@@ -283,9 +283,7 @@
 
 
     <!-- Contact Us -->
-    <form id="contact-form-section" action="https://api.staticforms.xyz/submit" method="post">
-        <input type="hidden" name="accessKey" value="5856c033-5e5b-4299-8024-7c75bd44c8b7" style="display: none;">
-        <input type="text" name="honeypot" style="display: none;">
+    <form id="contactForm contact-form-section" action="http://localhost:3000/send-email" method="post">
         <div class="space-y-12 px-8  md:px-24 lg:px-48">
             <div class="border-b border-t border-gray-900/10 pb-12">
                 <div class="grid grid-cols-1 sm:grid-cols-6 gap-x-6">
@@ -348,7 +346,7 @@
                             of
                             Inquiry</label>
                         <div class="mt-2">
-                            <textarea id="inquiry" name="message" rows="3"
+                            <textarea id="inquiry" name="inquiry" rows="3"
                                 class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-primary sm:text-sm sm:leading-6"
                                 required></textarea>
                         </div>
@@ -368,7 +366,6 @@
                 </a>
             </div>
         </div>
-        <input type="hidden" name="redirectTo" value="https://ctcmachining.com/success">
     </form>
 
     <!-- About us -->
@@ -435,6 +432,7 @@
             </div>
         </div>
     </div>
+
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
     <script src="node_modules/flowbite/dist/flowbite.min.js"></script>
