CEO, COO pictures

--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@
 
     <!-- Nav bar -->
     <nav class="bg-white">
-        <div class="mx-auto px-2 sm:px-6 lg:px-8 border-b border-t border-gray-900/10">
+        <div class="mx-auto px-2 sm:px-6 lg:px-8 border-b border-gray-900/10">
             <div class="relative flex h-16 items-center justify-between">
                 <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
                     <!-- Mobile menu button-->
@@ -103,7 +103,7 @@
 
 
     <!-- Landing Page -->
-    <div class=" px-8 pt-12 md:px-24 lg:px-48 flex flex-col justify-center">
+    <div class=" px-8 pt-12 pb-12 md:px-24 lg:px-48 flex flex-col justify-center bg-gray-50">
         <div class="flex flex-col items-center text-center lg:px-28">
             <h1 class="text-4xl lg:text-5xl font-bold tracking-tight text-gray-900 text-center">
                 Welcome to <span class="text-primary">CTC</span>
@@ -134,7 +134,8 @@
 
     </div>
 
-    <div class="py-12 px-8 pt-12 md:px-24 lg:px-48">
+    <!-- Slider -->
+    <div class="py-12 px-8 pt-12 md:px-24 lg:px-48 border-t">
         <div class="flex items-center justify-center max-w-screen-xl mx-auto">
             <div id="default-carousel" class="relative  w-full max-w-2xl " data-carousel="slide">
                 <!-- Carousel wrapper -->
@@ -417,7 +418,7 @@
                 <div class="flex flex-col items-center">
                     <!-- Image and info for team member 1 -->
                     <img class="mt-6 h-32 w-32 mx-auto rounded-full bg-gray-50"
-                        src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
+                        src="images/CEO.jpg"
                         alt="Ben Shawver">
                     <h3 class="text-xl font-semibold mt-4">Ben Shawver</h3>
                     <p class="text-primary">President / CEO</p>
@@ -426,7 +427,7 @@
                 <div class="flex flex-col items-center">
                     <!-- Image and info for team member 2 -->
                     <img class="mt-6 h-32 w-32 mx-auto rounded-full bg-gray-50"
-                        src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
+                        src="images/COO2.JPG"
                         alt="Carol Shawver">
                     <h3 class="text-xl font-semibold mt-4">Carol Shawver</h3>
                     <p class="text-primary">COO</p>
