--- a/success.html
+++ b/success.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="bg-white">
-        <div class="mx-auto px-2 border-b border-t border-gray-900/10">
+        <div class="mx-auto px-2 border-b border-gray-900/10">
             <div class="relative flex h-16 items-center justify-between">
                 <div class="flex flex-1 items-center">
                     <div class="flex flex-shrink-0 flex-col items-center">
