--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CTC Machining</title>
-    <link href="node_modules/flowbite/dist/flowbite.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flowbite@0.1.2/dist/flowbite.min.css">
+
     <link href="./output.css" rel="stylesheet">
 </head>
 
