another flowbtie update

--- a/index2.html
+++ b/index2.html
@@ -439,7 +439,7 @@
 
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
-    <script src="node_modules/flowbite/dist/flowbite.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
     <script src="validationHelper.js"></script>
     <script src="nav.js"></script>
 </body>
