--- a/index2.html
+++ b/index2.html
@@ -44,8 +44,8 @@
                     </button>
                 </div>
                 <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
-                    <div class="flex flex-shrink-0 items-center">
-                        <p>CTC Machining</p>
+                    <div class="overflow-hidden flex items-center">
+                        <img src="images/logopng.png" class="h-6 lg:h-10 w-auto" alt="Logo">
                     </div>
                     <div class="hidden sm:ml-6 sm:block">
                         <div class="flex space-x-4 justify-center sm:justify-start" id="desktop-menu">
@@ -83,8 +83,6 @@
                             <div class="py-1" role="none">
                                 <!-- Active: "bg-gray-100 text-gray-900", Not Active: "text-gray-700" -->
                                 <a href="#" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1"
-                                    id="products-mobile">Products</a>
-                                <a href="#" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1"
                                     id="services-mobile">Services</a>
                                 <a href="#" class="text-gray-700 block px-4 py-2 text-sm border-b border-gray-900/10"
                                     role="menuitem" tabindex="-1" id="about-us-mobile">About us</a>
@@ -103,19 +101,37 @@
 
 
     <!-- Landing Page -->
-    <div class=" px-8 pt-12 pb-12 md:px-24 lg:px-48 flex flex-col justify-center bg-gray-50">
+    <div class=" px-8 pt-12 pb-12 md:px-24 lg:px-48 flex flex-col justify-center">
         <div class="flex flex-col items-center text-center lg:px-28">
             <h1 class="text-4xl lg:text-5xl font-bold tracking-tight text-gray-900 text-center">
                 Welcome to <span class="text-primary">CTC</span>
             </h1>
-            <p class="mt-6 text-lg leading-8 text-gray-600">A CNC Milling company where quality and customer service is
+            <p class="mt-3 text-lg leading-8 text-gray-600">A CNC Milling company where quality and customer service is
                 our #1 priority.</p>
 
+            <div class="flex items-center justify-center py-6">
+                <div class="flex items-center px-8 md:px-24 lg:px-48">
+                    <div class="w-56 h-px bg-primary mr-2"></div> <!-- Horizontal line -->
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-gear-wide-connected h-6 w-auto" viewBox="0 0 16 16">
+                        <path
+                            d="M7.068.727c.243-.97 1.62-.97 1.864 0l.071.286a.96.96 0 0 0 1.622.434l.205-.211c.695-.719 1.888-.03 1.613.931l-.08.284a.96.96 0 0 0 1.187 1.187l.283-.081c.96-.275 1.65.918.931 1.613l-.211.205a.96.96 0 0 0 .434 1.622l.286.071c.97.243.97 1.62 0 1.864l-.286.071a.96.96 0 0 0-.434 1.622l.211.205c.719.695.03 1.888-.931 1.613l-.284-.08a.96.96 0 0 0-1.187 1.187l.081.283c.275.96-.918 1.65-1.613.931l-.205-.211a.96.96 0 0 0-1.622.434l-.071.286c-.243.97-1.62.97-1.864 0l-.071-.286a.96.96 0 0 0-1.622-.434l-.205.211c-.695.719-1.888.03-1.613-.931l.08-.284a.96.96 0 0 0-1.186-1.187l-.284.081c-.96.275-1.65-.918-.931-1.613l.211-.205a.96.96 0 0 0-.434-1.622l-.286-.071c-.97-.243-.97-1.62 0-1.864l.286-.071a.96.96 0 0 0 .434-1.622l-.211-.205c-.719-.695-.03-1.888.931-1.613l.284.08a.96.96 0 0 0 1.187-1.186l-.081-.284c-.275-.96.918-1.65 1.613-.931l.205.211a.96.96 0 0 0 1.622-.434zM12.973 8.5H8.25l-2.834 3.779A4.998 4.998 0 0 0 12.973 8.5m0-1a4.998 4.998 0 0 0-7.557-3.779l2.834 3.78zM5.048 3.967l-.087.065zm-.431.355A4.98 4.98 0 0 0 3.002 8c0 1.455.622 2.765 1.615 3.678L7.375 8zm.344 7.646.087.065z" />
+                    </svg><!-- Gear icon -->
+                    <div class="w-56 h-px bg-gray-900 ml-2"></div> <!-- Horizontal line -->
+                </div>
+            </div>
 
-            <p class="mt-6 text-lg leading-8 text-gray-600">If you already know what you need, please proceed straight
-                to our inquiry form for prompt service.</p>
-            <p class="mt-6 text-lg leading-8 text-gray-600">If this is your first visit, take a moment to learn about
+        </div>
+        <div class="flex flex-col items-start lg:px-28">
+            <h2 class="text-base font-semibold leading-7 text-primary flex items-start justify-start">New Here?</h2>
+            <p class="mt-1 pb-6 text-lg leading-8 text-gray-600">If this is your first visit, take a moment to learn
+                about
                 our high-precision machining services and industry solutions.</p>
+            <h2 class="text-base font-semibold leading-7 text-primary flex items-start justify-start">Returning
+                Customers</h2>
+            <p class="mt- text-lg leading-8 text-gray-600">If you already know what you need, please proceed straight
+                to our inquiry form for prompt service.</p>
+
             <button type="button"
                 onclick="document.getElementById('contactForm contact-form-section').scrollIntoView({ behavior: 'smooth' });"
                 class="flex flex-row items-center gap-3 rounded-md mt-6 bg-primary px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-primarylight focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
@@ -135,34 +151,36 @@
     </div>
 
     <!-- Slider -->
-    <div class="py-12 px-8 pt-12 md:px-24 lg:px-48 border-t">
-        <div class="flex items-center justify-center max-w-screen-xl mx-auto">
-            <div id="default-carousel" class="relative  w-full max-w-2xl " data-carousel="slide">
-                <!-- Carousel wrapper -->
-                <div class="relative h-96 overflow-hidden rounded-lg">
-                    <!-- Item 1 -->
-                    <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                        <img src="imageSlide/nobackground_1.png"
-                            class="absolute block max-w-sm -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
-                            alt="...">
-                    </div>
-                    <!-- Item 2 -->
-                    <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                        <img src="imageSlide/nobackground_2.png"
-                            class="absolute block max-w-sm -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
-                            alt="...">
-                    </div>
-                    <!-- Item 3 -->
-                    <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                        <img src="imageSlide/nobackground_3.png"
-                            class="absolute block max-w-sm -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
-                            alt="...">
-                    </div>
-                    <!-- Item 4 -->
-                    <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                        <img src="imageSlide/nobackground_4.png"
-                            class="absolute block max-w-sm -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
-                            alt="...">
+    <div class="px-8 md:px-24 lg:px-48">
+        <div class="pb-12">
+            <div class="flex items-center justify-center max-w-screen-xl mx-auto  bg-gray-50 border-x border-y rounded-lg rounded-lg">
+                <div id="default-carousel" class="relative  w-full max-w-2xl " data-carousel="slide">
+                    <!-- Carousel wrapper -->
+                    <div class="relative h-96 overflow-hidden rounded-lg">
+                        <!-- Item 1 -->
+                        <div class="hidden duration-700 ease-in-out" data-carousel-item>
+                            <img src="imageSlide/nobackground_1.png"
+                                class="absolute block max-w-sm -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
+                                alt="...">
+                        </div>
+                        <!-- Item 2 -->
+                        <div class="hidden duration-700 ease-in-out" data-carousel-item>
+                            <img src="imageSlide/nobackground_2.png"
+                                class="absolute block max-w-sm -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
+                                alt="...">
+                        </div>
+                        <!-- Item 3 -->
+                        <div class="hidden duration-700 ease-in-out" data-carousel-item>
+                            <img src="imageSlide/nobackground_3.png"
+                                class="absolute block max-w-sm -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
+                                alt="...">
+                        </div>
+                        <!-- Item 4 -->
+                        <div class="hidden duration-700 ease-in-out" data-carousel-item>
+                            <img src="imageSlide/nobackground_4.png"
+                                class="absolute block max-w-sm -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
+                                alt="...">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -417,17 +435,14 @@
                 <!-- Team Member 1 -->
                 <div class="flex flex-col items-center">
                     <!-- Image and info for team member 1 -->
-                    <img class="mt-6 h-32 w-32 mx-auto rounded-full bg-gray-50"
-                        src="images/CEO.jpg"
-                        alt="Ben Shawver">
+                    <img class="mt-6 h-32 w-32 mx-auto rounded-full bg-gray-50" src="images/CEO.jpg" alt="Ben Shawver">
                     <h3 class="text-xl font-semibold mt-4">Ben Shawver</h3>
                     <p class="text-primary">President / CEO</p>
                 </div>
                 <!-- Team Member 2 -->
                 <div class="flex flex-col items-center">
                     <!-- Image and info for team member 2 -->
-                    <img class="mt-6 h-32 w-32 mx-auto rounded-full bg-gray-50"
-                        src="images/COO2.JPG"
+                    <img class="mt-6 h-32 w-32 mx-auto rounded-full bg-gray-50" src="images/COO2.JPG"
                         alt="Carol Shawver">
                     <h3 class="text-xl font-semibold mt-4">Carol Shawver</h3>
                     <p class="text-primary">COO</p>
