--- a/index2.html
+++ b/index2.html
@@ -269,8 +269,8 @@
                 </div>
                 <div
                     class="flex justify-center lg:justify-start items-center lg:flex items-center lg:block h-full lg:relative">
-                    <img src="images/machine-bones.jpg" alt="Machine"
-                        class="rounded-xl shadow-lg ring-1 ring-gray-400/10 w-full h-auto lg:w-[56rem] lg:max-w-none lg:h-auto object-cover lg:object-scale-down" />
+                    <img src="images/IMG_3395.jpg" alt="Machine"
+                        class="rounded-xl shadow-lg ring-1 ring-gray-400/10 w-full h-auto lg:w-96 lg:max-w-none lg:h-auto object-cover lg:object-scale-down" />
                 </div>
             </div>
 
@@ -442,7 +442,7 @@
                 <!-- Team Member 2 -->
                 <div class="flex flex-col items-center">
                     <!-- Image and info for team member 2 -->
-                    <img class="mt-6 h-32 w-32 mx-auto rounded-full bg-gray-50" src="images/COO2.JPG"
+                    <img class="mt-6 h-32 w-32 mx-auto rounded-full bg-gray-50" src="images/IMG_3797.PNG"
                         alt="Carol Shawver">
                     <h3 class="text-xl font-semibold mt-4">Carol Shawver</h3>
                     <p class="text-primary">COO</p>
