new coo picture and lock x scroll for landing page

--- a/index2.html
+++ b/index2.html
@@ -101,7 +101,7 @@
 
 
     <!-- Landing Page -->
-    <div class=" px-8 pt-12 pb-12 md:px-24 lg:px-48 flex flex-col justify-center">
+    <div class=" px-8 pt-12 pb-12 md:px-24 lg:px-48 flex flex-col justify-center overflow-hidden">
         <div class="flex flex-col items-center text-center lg:px-28">
             <h1 class="text-4xl lg:text-5xl font-bold tracking-tight text-gray-900 text-center">
                 Welcome to <span class="text-primary">CTC</span>
@@ -110,7 +110,7 @@
                 our #1 priority.</p>
 
             <div class="flex items-center justify-center py-6">
-                <div class="flex items-center px-8 md:px-24 lg:px-48">
+                <div class="flex items-center">
                     <div class="w-56 h-px bg-primary mr-2"></div> <!-- Horizontal line -->
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="bi bi-gear-wide-connected h-6 w-auto" viewBox="0 0 16 16">
@@ -442,7 +442,7 @@
                 <!-- Team Member 2 -->
                 <div class="flex flex-col items-center">
                     <!-- Image and info for team member 2 -->
-                    <img class="mt-6 h-32 w-32 mx-auto rounded-full bg-gray-50" src="images/IMG_3797.PNG"
+                    <img class="mt-6 h-32 w-32 mx-auto rounded-full bg-gray-50" src="images/coopng.png"
                         alt="Carol Shawver">
                     <h3 class="text-xl font-semibold mt-4">Carol Shawver</h3>
                     <p class="text-primary">COO</p>
