code cleanup, seo ready including meta, alts, proper title

--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CTC Machining</title>
+    <meta name="description"
+        content="CTC Machining offers high-quality CNC milling services with precision engineering and custom part designs. Contact us for customized fixturing, industry solutions, and prompt customer service.">
+    <title>CTC Machining | Precision CNC Milling Services</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.css" rel="stylesheet" />
     <link href="./output.css" rel="stylesheet">
 </head>
@@ -15,41 +17,13 @@
     <nav class="bg-white">
         <div class="mx-auto px-2 sm:px-6 lg:px-8 border-b border-gray-900/10">
             <div class="relative flex h-16 items-center justify-between">
-                <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
-                    <!-- Mobile menu button-->
-                    <button type="button"
-                        class="relative inline-flex items-center justify-center hover:bg-gray-900 hover:text-white rounded-md p-2 text-gray-900 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
-                        aria-controls="mobile-menu" aria-expanded="false">
-                        <span class="absolute -inset-0.5"></span>
-                        <span class="sr-only">Open main menu</span>
-                        <!--
-                  Icon when menu is closed.
-      
-                  Menu open: "hidden", Menu closed: "block"
-                -->
-                        <svg class="block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-                        </svg>
-                        <!--
-                  Icon when menu is open.
-      
-                  Menu open: "block", Menu closed: "hidden"
-                -->
-                        <svg class="hidden h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-                        </svg>
-                    </button>
-                </div>
+                <!-- Desktop Menu -->
                 <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
                     <div class="overflow-hidden flex items-center">
-                        <img src="images/logopng.png" class="h-6 lg:h-10 w-auto" alt="Logo">
+                        <img src="images/logopng.png" class="h-6 lg:h-10 w-auto" alt="CTC Machining Logo">
                     </div>
                     <div class="hidden sm:ml-6 sm:block">
                         <div class="flex space-x-4 justify-center sm:justify-start" id="desktop-menu">
-                            <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
                             <a href="#"
                                 class="text-gray-900  hover:text-gray-600 rounded-md px-3 py-2 text-md font-medium"
                                 aria-current="page" id="about-us">About us</a>
@@ -62,6 +36,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- Mobile Menu -->
                 <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
                     <div class="relative inline-block text-left">
                         <div>
@@ -93,10 +68,7 @@
                     </div>
                 </div>
             </div>
-
-
         </div>
-
     </nav>
 
 
@@ -153,41 +125,37 @@
     <!-- Slider -->
     <div class="px-8 md:px-24 lg:px-48">
         <div class="pb-12">
-            <div class="flex items-center justify-center max-w-screen-xl mx-auto  bg-gray-50 border-x border-y rounded-lg rounded-lg">
+            <div
+                class="flex items-center justify-center max-w-screen-xl mx-auto  bg-gray-50 border-x border-y rounded-lg rounded-lg">
                 <div id="default-carousel" class="relative  w-full max-w-2xl " data-carousel="slide">
                     <!-- Carousel wrapper -->
                     <div class="relative h-96 overflow-hidden rounded-lg">
-                        <!-- Item 1 -->
+                        <!-- Machine Parts -->
                         <div class="hidden duration-700 ease-in-out" data-carousel-item>
                             <img src="imageSlide/nobackground_1.png"
                                 class="absolute block max-w-sm -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
-                                alt="...">
+                                alt="CTC Made Machine Part">
                         </div>
-                        <!-- Item 2 -->
                         <div class="hidden duration-700 ease-in-out" data-carousel-item>
                             <img src="imageSlide/nobackground_2.png"
                                 class="absolute block max-w-sm -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
-                                alt="...">
+                                alt="CTC Made Machine Part">
                         </div>
-                        <!-- Item 3 -->
                         <div class="hidden duration-700 ease-in-out" data-carousel-item>
                             <img src="imageSlide/nobackground_3.png"
                                 class="absolute block max-w-sm -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
-                                alt="...">
+                                alt="CTC Made Machine Part">
                         </div>
-                        <!-- Item 4 -->
                         <div class="hidden duration-700 ease-in-out" data-carousel-item>
                             <img src="imageSlide/nobackground_4.png"
                                 class="absolute block max-w-sm -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
-                                alt="...">
+                                alt="CTC Made Machine Part">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-
 
     <!-- Our Services -->
     <div class="px-8  md:px-24 lg:px-48 overflow-hidden sm:overflow-x-hidden md:overflow-x-hidden lg:overflow-x-hidden"
@@ -267,16 +235,14 @@
                         </dl>
                     </div>
                 </div>
+                <!-- Our Services Picture -->
                 <div
                     class="flex justify-center lg:justify-start items-center lg:flex items-center lg:block h-full lg:relative">
-                    <img src="images/IMG_3395.jpg" alt="Machine"
+                    <img src="images/IMG_3395.jpg" alt="The Tormach Machine"
                         class="rounded-xl shadow-lg ring-1 ring-gray-400/10 w-full h-auto lg:w-96 lg:max-w-none lg:h-auto object-cover lg:object-scale-down" />
                 </div>
             </div>
-
-
         </div>
-
     </div>
 
     <!-- How to Work with Us -->
@@ -299,8 +265,6 @@
         </div>
     </div>
 
-
-
     <!-- Contact Us -->
     <form id="contactForm contact-form-section" action="https://api.staticforms.xyz/submit" method="post">
         <input type="hidden" name="accessKey" value="5856c033-5e5b-4299-8024-7c75bd44c8b7">
@@ -319,7 +283,6 @@
                             within 24-48 hours.</p>
                     </div>
                 </div>
-
                 <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
                     <div class="sm:col-span-3">
                         <label for="first-name" class="block text-sm font-medium leading-6 text-gray-900">First
@@ -330,7 +293,6 @@
                                 required>
                         </div>
                     </div>
-
                     <div class="sm:col-span-3">
                         <label for="last-name" class="block text-sm font-medium leading-6 text-gray-900">Last
                             name</label>
@@ -340,7 +302,6 @@
                                 required>
                         </div>
                     </div>
-
                     <div class="sm:col-span-3">
                         <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Email
                             address</label>
@@ -352,7 +313,6 @@
 
                         </div>
                     </div>
-
                     <div class="sm:col-span-3">
                         <label for="tel" class="block text-sm font-medium leading-6 text-gray-900">Phone Number
                             (Optional)</label>
@@ -361,7 +321,6 @@
                                 class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-primary sm:text-sm sm:leading-6">
                         </div>
                     </div>
-
                     <div class="col-span-full">
                         <label for="inquiry" class="block text-sm font-medium leading-6 text-gray-900">Description
                             of
@@ -379,7 +338,6 @@
                         Inquiry</button>
                     <p class="flex items-center font-bold">OR</p>
                 </div>
-
                 <p class="py-6 mt-1 text-sm leading-6 text-gray-600 sm:col-span-3">If you prefer to contact us by phone,
                     give us a call at:</p>
                 <a href="tel:+443-203-8144" class="text-primary hover:text-primarydark transition-colors duration-300">
@@ -394,7 +352,6 @@
     <div class="px-8 md:px-24 lg:px-48 sm:overflow-hidden" id="about-us-section">
         <div class="py-12 flex flex-col items-center ">
             <div class="w-full lg:max-w-xlg flex justify-start items-start flex-col ">
-
                 <h2 class="text-base font-semibold leading-7 text-primary">Who are we?</h2>
                 <p class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl pb-6">
                     About Us</p>
@@ -432,31 +389,27 @@
                     forefront.</p>
             </div>
             <div class="col-span-2 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-6">
-                <!-- Team Member 1 -->
+                <!-- Team Members -->
                 <div class="flex flex-col items-center">
-                    <!-- Image and info for team member 1 -->
                     <img class="mt-6 h-32 w-32 mx-auto rounded-full bg-gray-50" src="images/CEO.jpg" alt="Ben Shawver">
                     <h3 class="text-xl font-semibold mt-4">Ben Shawver</h3>
                     <p class="text-primary">President / CEO</p>
                 </div>
-                <!-- Team Member 2 -->
                 <div class="flex flex-col items-center">
-                    <!-- Image and info for team member 2 -->
                     <img class="mt-6 h-32 w-32 mx-auto rounded-full bg-gray-50" src="images/coopng.png"
                         alt="Carol Shawver">
                     <h3 class="text-xl font-semibold mt-4">Carol Shawver</h3>
                     <p class="text-primary">COO</p>
                 </div>
-                <!-- Additional team members would go here -->
             </div>
         </div>
     </div>
-
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
     <script src="validationHelper.js"></script>
     <script src="nav.js"></script>
+
 </body>
 
 </html>
