--- a/index2.html
+++ b/index2.html
@@ -267,7 +267,7 @@
 
     <!-- Contact Us -->
     <form id="contactForm contact-form-section" action="https://api.staticforms.xyz/submit" method="post">
-        <input type="hidden" name="accessKey" value="5856c033-5e5b-4299-8024-7c75bd44c8b7">
+        <input type="hidden" name="accessKey" value="6bf18917-391f-4d2f-ae18-91afa9f8f64f">
         <input type="text" name="honeypot" style="display: none;">
         <div class="space-y-12 px-8  md:px-24 lg:px-48">
             <div class="border-b border-t border-gray-900/10 pb-12">
@@ -396,7 +396,7 @@
                     <p class="text-primary">President / CEO</p>
                 </div>
                 <div class="flex flex-col items-center">
-                    <img class="mt-6 h-32 w-32 mx-auto rounded-full bg-gray-50" src="images/coopng.png"
+                    <img class="mt-6 h-32 w-32 mx-auto rounded-full bg-gray-50" src="images/coopng.jpg"
                         alt="Carol Shawver">
                     <h3 class="text-xl font-semibold mt-4">Carol Shawver</h3>
                     <p class="text-primary">COO</p>
