new part pictures, nav error fix

--- a/index2.html
+++ b/index2.html
@@ -155,7 +155,7 @@
                             <img src="imageSlide/nobackground_5.png"
                                 class="absolute block max-w-sm -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
                                 alt="CTC Made Machine Part">
-                        </div>
+                        </div> 
                         <div class="hidden duration-700 ease-in-out" data-carousel-item>
                             <img src="imageSlide/nobackground_6.png"
                                 class="absolute block max-w-sm -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
@@ -168,7 +168,7 @@
     </div>
 
     <!-- Our Services -->
-    <div class="px-8  md:px-24 lg:px-48 overflow-hidden sm:overflow-x-hidden md:overflow-x-hidden lg:overflow-x-hidden"
+    <div class="px-8 md:px-24 lg:px-48 overflow-hidden sm:overflow-x-hidden md:overflow-x-hidden lg:overflow-x-hidden"
         id="our-services-section">
         <div class="py-12 border-t border-gray-900/10 ">
             <div
@@ -247,9 +247,9 @@
                 </div>
                 <!-- Our Services Picture -->
                 <div
-                    class="flex justify-center lg:justify-start items-center lg:flex items-center lg:block h-full lg:relative">
+                    class="flex justify-center lg:justify-start items-center lg:flex items-center lg:block lg:max-w-xlg h-full lg:relative">
                     <img src="images/IMG_3395.jpg" alt="The Tormach Machine"
-                        class="rounded-xl shadow-lg ring-1 ring-gray-400/10 w-full h-auto lg:w-96 lg:max-w-none lg:h-auto object-cover lg:object-scale-down" />
+                        class="rounded-xl shadow-lg ring-1 ring-gray-400/10 w-full lg:w-96 lg:h-auto object-cover " style="max-height: 850px;" />
                 </div>
             </div>
         </div>
