recaptcha site key

--- a/index.html
+++ b/index.html
@@ -357,6 +357,8 @@
             </div>
         </div>
         <input type="hidden" name="redirectTo" value="https://ctcmachining.com/success">
+        <div class="g-recaptcha" data-sitekey="6LfdWQorAAAAAIDP7qc9K2hN6r-CCelIoS4oCiIo"></div>
+        <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     </form>
 
     <!-- About us -->
